update dependencies to latest version

--- a/deps/rust/crates/BUILD.clap-4.5.60.bazel
+++ b/deps/rust/crates/BUILD.clap-4.5.60.bazel
@@ -6,13 +6,16 @@
 #     bazel run @@//deps/rust:crates_vendor
 ###############################################################################
 
-load("@rules_rust//cargo:defs.bzl", "cargo_build_script")
-load("@rules_rust//rust:defs.bzl", "rust_library")
+load(
+    "@rules_rust//rust:defs.bzl",
+    "rust_binary",
+    "rust_library",
+)
 
 package(default_visibility = ["//visibility:public"])
 
 rust_library(
-    name = "wasm_bindgen",
+    name = "clap",
     srcs = glob(
         include = ["**/*.rs"],
         allow_empty = True,
@@ -29,45 +32,43 @@ rust_library(
             "WORKSPACE.bazel",
         ],
     ),
+    crate_features = [
+        "derive",
+        "help",
+        "std",
+    ],
     crate_root = "src/lib.rs",
     edition = "2021",
     proc_macro_deps = [
-        "@crates_vendor__wasm-bindgen-macro-0.2.108//:wasm_bindgen_macro",
+        "@crates_vendor__clap_derive-4.5.55//:clap_derive",
     ],
     rustc_flags = [
         "--cap-lints=allow",
     ],
     tags = [
         "cargo-bazel",
-        "crate-name=wasm-bindgen",
+        "crate-name=clap",
         "manual",
         "noclippy",
         "norustfmt",
     ],
-    version = "0.2.108",
+    version = "4.5.60",
     deps = [
-        "@crates_vendor__cfg-if-1.0.4//:cfg_if",
-        "@crates_vendor__once_cell-1.21.3//:once_cell",
-        "@crates_vendor__wasm-bindgen-0.2.108//:build_script_build",
-        "@crates_vendor__wasm-bindgen-shared-0.2.108//:wasm_bindgen_shared",
+        "@crates_vendor__clap_builder-4.5.60//:clap_builder",
     ],
 )
 
-cargo_build_script(
-    name = "_bs",
+rust_binary(
+    name = "stdio-fixture__bin",
     srcs = glob(
         include = ["**/*.rs"],
         allow_empty = True,
     ),
-    aliases = {
-        "@crates_vendor__rustversion-1.0.22//:rustversion": "rustversion_compat",
-    },
     compile_data = glob(
         include = ["**"],
         allow_empty = True,
         exclude = [
             "**/* *",
-            "**/*.rs",
             ".tmp_git_root/**/*",
             "BUILD",
             "BUILD.bazel",
@@ -75,44 +76,29 @@ cargo_build_script(
             "WORKSPACE.bazel",
         ],
     ),
-    crate_name = "build_script_build",
-    crate_root = "build.rs",
-    data = glob(
-        include = ["**"],
-        allow_empty = True,
-        exclude = [
-            "**/* *",
-            ".tmp_git_root/**/*",
-            "BUILD",
-            "BUILD.bazel",
-            "WORKSPACE",
-            "WORKSPACE.bazel",
-        ],
-    ),
-    edition = "2021",
-    link_deps = [
-        "@crates_vendor__wasm-bindgen-shared-0.2.108//:wasm_bindgen_shared",
+    crate_features = [
+        "derive",
+        "help",
+        "std",
     ],
-    pkg_name = "wasm-bindgen",
+    crate_root = "src/bin/stdio-fixture.rs",
+    edition = "2021",
     proc_macro_deps = [
-        "@crates_vendor__rustversion-1.0.22//:rustversion",
+        "@crates_vendor__clap_derive-4.5.55//:clap_derive",
     ],
     rustc_flags = [
         "--cap-lints=allow",
     ],
     tags = [
         "cargo-bazel",
-        "crate-name=wasm-bindgen",
+        "crate-name=clap",
         "manual",
         "noclippy",
         "norustfmt",
     ],
-    version = "0.2.108",
-    visibility = ["//visibility:private"],
-)
-
-alias(
-    name = "build_script_build",
-    actual = ":_bs",
-    tags = ["manual"],
+    version = "4.5.60",
+    deps = [
+        ":clap",
+        "@crates_vendor__clap_builder-4.5.60//:clap_builder",
+    ],
 )
