--- a/deps/rust/crates/BUILD.bumpalo-3.20.2.bazel
+++ b/deps/rust/crates/BUILD.bumpalo-3.20.2.bazel
@@ -11,7 +11,7 @@ load("@rules_rust//rust:defs.bzl", "rust_library")
 package(default_visibility = ["//visibility:public"])
 
 rust_library(
-    name = "futures_task",
+    name = "bumpalo",
     srcs = glob(
         include = ["**/*.rs"],
         allow_empty = True,
@@ -29,20 +29,23 @@ rust_library(
         ],
     ),
     crate_features = [
-        "alloc",
-        "std",
+        "allocator-api2",
+        "default",
     ],
     crate_root = "src/lib.rs",
-    edition = "2018",
+    edition = "2021",
     rustc_flags = [
         "--cap-lints=allow",
     ],
     tags = [
         "cargo-bazel",
-        "crate-name=futures-task",
+        "crate-name=bumpalo",
         "manual",
         "noclippy",
         "norustfmt",
     ],
-    version = "0.3.31",
+    version = "3.20.2",
+    deps = [
+        "@crates_vendor__allocator-api2-0.2.21//:allocator_api2",
+    ],
 )
