--- a/deps/rust/crates/BUILD.capnp-futures-0.25.2.bazel
+++ b/deps/rust/crates/BUILD.capnp-futures-0.25.2.bazel
@@ -11,7 +11,7 @@ load("@rules_rust//rust:defs.bzl", "rust_library")
 package(default_visibility = ["//visibility:public"])
 
 rust_library(
-    name = "syn",
+    name = "capnp_futures",
     srcs = glob(
         include = ["**/*.rs"],
         allow_empty = True,
@@ -28,19 +28,6 @@ rust_library(
             "WORKSPACE.bazel",
         ],
     ),
-    crate_features = [
-        "clone-impls",
-        "default",
-        "derive",
-        "extra-traits",
-        "fold",
-        "full",
-        "parsing",
-        "printing",
-        "proc-macro",
-        "visit",
-        "visit-mut",
-    ],
     crate_root = "src/lib.rs",
     edition = "2021",
     rustc_flags = [
@@ -48,15 +35,15 @@ rust_library(
     ],
     tags = [
         "cargo-bazel",
-        "crate-name=syn",
+        "crate-name=capnp-futures",
         "manual",
         "noclippy",
         "norustfmt",
     ],
-    version = "2.0.115",
+    version = "0.25.2",
     deps = [
-        "@crates_vendor__proc-macro2-1.0.106//:proc_macro2",
-        "@crates_vendor__quote-1.0.44//:quote",
-        "@crates_vendor__unicode-ident-1.0.23//:unicode_ident",
+        "@crates_vendor__capnp-0.25.1//:capnp",
+        "@crates_vendor__futures-channel-0.3.32//:futures_channel",
+        "@crates_vendor__futures-util-0.3.32//:futures_util",
     ],
 )
