--- a/deps/rust/crates/BUILD.clap_builder-4.5.60.bazel
+++ b/deps/rust/crates/BUILD.clap_builder-4.5.60.bazel
@@ -11,7 +11,7 @@ load("@rules_rust//rust:defs.bzl", "rust_library")
 package(default_visibility = ["//visibility:public"])
 
 rust_library(
-    name = "futures_io",
+    name = "clap_builder",
     srcs = glob(
         include = ["**/*.rs"],
         allow_empty = True,
@@ -29,19 +29,24 @@ rust_library(
         ],
     ),
     crate_features = [
+        "help",
         "std",
     ],
     crate_root = "src/lib.rs",
-    edition = "2018",
+    edition = "2021",
     rustc_flags = [
         "--cap-lints=allow",
     ],
     tags = [
         "cargo-bazel",
-        "crate-name=futures-io",
+        "crate-name=clap_builder",
         "manual",
         "noclippy",
         "norustfmt",
     ],
-    version = "0.3.31",
+    version = "4.5.60",
+    deps = [
+        "@crates_vendor__anstyle-1.0.13//:anstyle",
+        "@crates_vendor__clap_lex-1.0.0//:clap_lex",
+    ],
 )
