--- a/deps/rust/crates/BUILD.futures-channel-0.3.32.bazel
+++ b/deps/rust/crates/BUILD.futures-channel-0.3.32.bazel
@@ -6,12 +6,12 @@
 #     bazel run @@//deps/rust:crates_vendor
 ###############################################################################
 
-load("@rules_rust//rust:defs.bzl", "rust_proc_macro")
+load("@rules_rust//rust:defs.bzl", "rust_library")
 
 package(default_visibility = ["//visibility:public"])
 
-rust_proc_macro(
-    name = "wasm_bindgen_macro",
+rust_library(
+    name = "futures_channel",
     srcs = glob(
         include = ["**/*.rs"],
         allow_empty = True,
@@ -28,21 +28,27 @@ rust_proc_macro(
             "WORKSPACE.bazel",
         ],
     ),
+    crate_features = [
+        "alloc",
+        "futures-sink",
+        "sink",
+        "std",
+    ],
     crate_root = "src/lib.rs",
-    edition = "2021",
+    edition = "2018",
     rustc_flags = [
         "--cap-lints=allow",
     ],
     tags = [
         "cargo-bazel",
-        "crate-name=wasm-bindgen-macro",
+        "crate-name=futures-channel",
         "manual",
         "noclippy",
         "norustfmt",
     ],
-    version = "0.2.108",
+    version = "0.3.32",
     deps = [
-        "@crates_vendor__quote-1.0.44//:quote",
-        "@crates_vendor__wasm-bindgen-macro-support-0.2.108//:wasm_bindgen_macro_support",
+        "@crates_vendor__futures-core-0.3.32//:futures_core",
+        "@crates_vendor__futures-sink-0.3.32//:futures_sink",
     ],
 )
