--- a/deps/rust/crates/BUILD.futures-executor-0.3.32.bazel
+++ b/deps/rust/crates/BUILD.futures-executor-0.3.32.bazel
@@ -11,7 +11,7 @@ load("@rules_rust//rust:defs.bzl", "rust_library")
 package(default_visibility = ["//visibility:public"])
 
 rust_library(
-    name = "js_sys",
+    name = "futures_executor",
     srcs = glob(
         include = ["**/*.rs"],
         allow_empty = True,
@@ -28,21 +28,25 @@ rust_library(
             "WORKSPACE.bazel",
         ],
     ),
+    crate_features = [
+        "std",
+    ],
     crate_root = "src/lib.rs",
-    edition = "2021",
+    edition = "2018",
     rustc_flags = [
         "--cap-lints=allow",
     ],
     tags = [
         "cargo-bazel",
-        "crate-name=js-sys",
+        "crate-name=futures-executor",
         "manual",
         "noclippy",
         "norustfmt",
     ],
-    version = "0.3.85",
+    version = "0.3.32",
     deps = [
-        "@crates_vendor__once_cell-1.21.3//:once_cell",
-        "@crates_vendor__wasm-bindgen-0.2.108//:wasm_bindgen",
+        "@crates_vendor__futures-core-0.3.32//:futures_core",
+        "@crates_vendor__futures-task-0.3.32//:futures_task",
+        "@crates_vendor__futures-util-0.3.32//:futures_util",
     ],
 )
