--- a/deps/rust/crates/BUILD.futures-macro-0.3.32.bazel
+++ b/deps/rust/crates/BUILD.futures-macro-0.3.32.bazel
@@ -6,12 +6,12 @@
 #     bazel run @@//deps/rust:crates_vendor
 ###############################################################################
 
-load("@rules_rust//rust:defs.bzl", "rust_library")
+load("@rules_rust//rust:defs.bzl", "rust_proc_macro")
 
 package(default_visibility = ["//visibility:public"])
 
-rust_library(
-    name = "futures_core",
+rust_proc_macro(
+    name = "futures_macro",
     srcs = glob(
         include = ["**/*.rs"],
         allow_empty = True,
@@ -28,10 +28,6 @@ rust_library(
             "WORKSPACE.bazel",
         ],
     ),
-    crate_features = [
-        "alloc",
-        "std",
-    ],
     crate_root = "src/lib.rs",
     edition = "2018",
     rustc_flags = [
@@ -39,10 +35,15 @@ rust_library(
     ],
     tags = [
         "cargo-bazel",
-        "crate-name=futures-core",
+        "crate-name=futures-macro",
         "manual",
         "noclippy",
         "norustfmt",
     ],
-    version = "0.3.31",
+    version = "0.3.32",
+    deps = [
+        "@crates_vendor__proc-macro2-1.0.106//:proc_macro2",
+        "@crates_vendor__quote-1.0.44//:quote",
+        "@crates_vendor__syn-2.0.117//:syn",
+    ],
 )
