--- a/deps/rust/crates/BUILD.futures-sink-0.3.32.bazel
+++ b/deps/rust/crates/BUILD.futures-sink-0.3.32.bazel
@@ -11,7 +11,7 @@ load("@rules_rust//rust:defs.bzl", "rust_library")
 package(default_visibility = ["//visibility:public"])
 
 rust_library(
-    name = "capnp_futures",
+    name = "futures_sink",
     srcs = glob(
         include = ["**/*.rs"],
         allow_empty = True,
@@ -28,22 +28,21 @@ rust_library(
             "WORKSPACE.bazel",
         ],
     ),
+    crate_features = [
+        "alloc",
+        "std",
+    ],
     crate_root = "src/lib.rs",
-    edition = "2021",
+    edition = "2018",
     rustc_flags = [
         "--cap-lints=allow",
     ],
     tags = [
         "cargo-bazel",
-        "crate-name=capnp-futures",
+        "crate-name=futures-sink",
         "manual",
         "noclippy",
         "norustfmt",
     ],
-    version = "0.25.1",
-    deps = [
-        "@crates_vendor__capnp-0.25.1//:capnp",
-        "@crates_vendor__futures-channel-0.3.31//:futures_channel",
-        "@crates_vendor__futures-util-0.3.31//:futures_util",
-    ],
+    version = "0.3.32",
 )
