--- a/deps/rust/crates/BUILD.js-sys-0.3.88.bazel
+++ b/deps/rust/crates/BUILD.js-sys-0.3.88.bazel
@@ -11,7 +11,7 @@ load("@rules_rust//rust:defs.bzl", "rust_library")
 package(default_visibility = ["//visibility:public"])
 
 rust_library(
-    name = "futures_channel",
+    name = "js_sys",
     srcs = glob(
         include = ["**/*.rs"],
         allow_empty = True,
@@ -28,27 +28,21 @@ rust_library(
             "WORKSPACE.bazel",
         ],
     ),
-    crate_features = [
-        "alloc",
-        "futures-sink",
-        "sink",
-        "std",
-    ],
     crate_root = "src/lib.rs",
-    edition = "2018",
+    edition = "2021",
     rustc_flags = [
         "--cap-lints=allow",
     ],
     tags = [
         "cargo-bazel",
-        "crate-name=futures-channel",
+        "crate-name=js-sys",
         "manual",
         "noclippy",
         "norustfmt",
     ],
-    version = "0.3.31",
+    version = "0.3.88",
     deps = [
-        "@crates_vendor__futures-core-0.3.31//:futures_core",
-        "@crates_vendor__futures-sink-0.3.31//:futures_sink",
+        "@crates_vendor__once_cell-1.21.3//:once_cell",
+        "@crates_vendor__wasm-bindgen-0.2.111//:wasm_bindgen",
     ],
 )
