--- a/deps/rust/crates/BUILD.syn-2.0.117.bazel
+++ b/deps/rust/crates/BUILD.syn-2.0.117.bazel
@@ -11,7 +11,7 @@ load("@rules_rust//rust:defs.bzl", "rust_library")
 package(default_visibility = ["//visibility:public"])
 
 rust_library(
-    name = "bumpalo",
+    name = "syn",
     srcs = glob(
         include = ["**/*.rs"],
         allow_empty = True,
@@ -29,8 +29,17 @@ rust_library(
         ],
     ),
     crate_features = [
-        "allocator-api2",
+        "clone-impls",
         "default",
+        "derive",
+        "extra-traits",
+        "fold",
+        "full",
+        "parsing",
+        "printing",
+        "proc-macro",
+        "visit",
+        "visit-mut",
     ],
     crate_root = "src/lib.rs",
     edition = "2021",
@@ -39,13 +48,15 @@ rust_library(
     ],
     tags = [
         "cargo-bazel",
-        "crate-name=bumpalo",
+        "crate-name=syn",
         "manual",
         "noclippy",
         "norustfmt",
     ],
-    version = "3.19.1",
+    version = "2.0.117",
     deps = [
-        "@crates_vendor__allocator-api2-0.2.21//:allocator_api2",
+        "@crates_vendor__proc-macro2-1.0.106//:proc_macro2",
+        "@crates_vendor__quote-1.0.44//:quote",
+        "@crates_vendor__unicode-ident-1.0.24//:unicode_ident",
     ],
 )
