--- a/deps/rust/crates/BUILD.unicode-ident-1.0.24.bazel
+++ b/deps/rust/crates/BUILD.unicode-ident-1.0.24.bazel
@@ -11,7 +11,7 @@ load("@rules_rust//rust:defs.bzl", "rust_library")
 package(default_visibility = ["//visibility:public"])
 
 rust_library(
-    name = "wasm_bindgen_macro_support",
+    name = "unicode_ident",
     srcs = glob(
         include = ["**/*.rs"],
         allow_empty = True,
@@ -35,17 +35,10 @@ rust_library(
     ],
     tags = [
         "cargo-bazel",
-        "crate-name=wasm-bindgen-macro-support",
+        "crate-name=unicode-ident",
         "manual",
         "noclippy",
         "norustfmt",
     ],
-    version = "0.2.108",
-    deps = [
-        "@crates_vendor__bumpalo-3.19.1//:bumpalo",
-        "@crates_vendor__proc-macro2-1.0.106//:proc_macro2",
-        "@crates_vendor__quote-1.0.44//:quote",
-        "@crates_vendor__syn-2.0.115//:syn",
-        "@crates_vendor__wasm-bindgen-shared-0.2.108//:wasm_bindgen_shared",
-    ],
+    version = "1.0.24",
 )
