--- a/deps/rust/crates/BUILD.wasm-bindgen-macro-support-0.2.111.bazel
+++ b/deps/rust/crates/BUILD.wasm-bindgen-macro-support-0.2.111.bazel
@@ -11,7 +11,7 @@ load("@rules_rust//rust:defs.bzl", "rust_library")
 package(default_visibility = ["//visibility:public"])
 
 rust_library(
-    name = "clap_builder",
+    name = "wasm_bindgen_macro_support",
     srcs = glob(
         include = ["**/*.rs"],
         allow_empty = True,
@@ -28,10 +28,6 @@ rust_library(
             "WORKSPACE.bazel",
         ],
     ),
-    crate_features = [
-        "help",
-        "std",
-    ],
     crate_root = "src/lib.rs",
     edition = "2021",
     rustc_flags = [
@@ -39,14 +35,17 @@ rust_library(
     ],
     tags = [
         "cargo-bazel",
-        "crate-name=clap_builder",
+        "crate-name=wasm-bindgen-macro-support",
         "manual",
         "noclippy",
         "norustfmt",
     ],
-    version = "4.5.58",
+    version = "0.2.111",
     deps = [
-        "@crates_vendor__anstyle-1.0.13//:anstyle",
-        "@crates_vendor__clap_lex-1.0.0//:clap_lex",
+        "@crates_vendor__bumpalo-3.20.2//:bumpalo",
+        "@crates_vendor__proc-macro2-1.0.106//:proc_macro2",
+        "@crates_vendor__quote-1.0.44//:quote",
+        "@crates_vendor__syn-2.0.117//:syn",
+        "@crates_vendor__wasm-bindgen-shared-0.2.111//:wasm_bindgen_shared",
     ],
 )
